Edited About Me Description

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     With hands-on experience in both frontend and backend development, I've built everything from full-stack web applications to desktop systems managing critical data. My technical toolkit includes C#, Java, JavaScript, and modern frameworks like React, Node.js, and Spring Boot.
                 </p>
                 <p>
-                    I thrive in collaborative environments and have demonstrated leadership through academic projects, including achieving the highest project score (98%) in my cohort. Currently, I'm seeking international internship or graduate program opportunities in Europe and globally, where I can contribute, learn, and grow as a software engineer.
+                    I thrive in collaborative environments and have demonstrated leadership through academic projects, including achieving the highest project score (98%) in my cohort. Currently, I'm seeking internship or graduate program opportunities globally, where I can contribute, learn, and grow as a software engineer.
                 </p>
                 <div class="about-highlights">
                     <div class="highlight-item">
