Edited the LinkedIn hyperlink.

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                     <div class="contact-label">Email</div>
                     <div class="contact-value">ganeshshiva772@gmail.com</div>
                 </a>
-                <a href="https://www.linkedin.com/in/shiva-ganesh-310121342?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bwj1aj2p3Sy6Wgpc6%2FMJKzg%3D%3D" target="_blank" class="contact-card">
+                <a href="https://www.linkedin.com/in/shiva-ganesh-nagadan" target="_blank" class="contact-card">
                     <div class="contact-label">LinkedIn</div>
                     <div class="contact-value">linkedin.com/in/shiva-ganesh</div>
                 </a>
