Corrected link heading

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                 </a>
                 <a href="https://www.linkedin.com/in/shiva-ganesh-nagadan" target="_blank" class="contact-card">
                     <div class="contact-label">LinkedIn</div>
-                    <div class="contact-value">linkedin.com/in/shiva-ganesh</div>
+                    <div class="contact-value">linkedin.com/in/shiva-ganesh-nagadan</div>
                 </a>
                 <a href="tel:+27833005651" class="contact-card">
                     <div class="contact-label">Phone</div>
