Updated project Status and Corrected Leadership description

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <div class="project-card">
                 <div class="project-header">
                     <span class="project-number">01</span>
-                    <span class="project-status">In Progress</span>
+                    <span class="project-status"> Completed </span>
                 </div>
                 <h3>Internship Management System</h3>
                 <p>A comprehensive full-stack platform designed to streamline internship processes for students, companies, and administrators.</p>
@@ -221,7 +221,7 @@
                     <li>Normalized relational database design with SQL Server</li>
                     <li>Modern React frontend currently in development for enhanced UX</li>
                 </ul>
-                <a href="https://github.com/yourusername/internship-management" target="_blank" class="github-link">
+                <a href="https://github.com/Shiva04-Dev/C-Internship-Management-System" target="_blank" class="github-link">
                     <svg width="20" height="20" viewBox="0 0 16 16" fill="currentColor">
                         <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
                     </svg>
@@ -244,7 +244,7 @@
                     <span class="project-status">Completed</span>
                 </div>
                 <h3>Student Management System</h3>
-                <p>Desktop application for comprehensive student record management - achieved highest project score (98%) in cohort.</p>
+                <p>Desktop application for comprehensive student record management - achieved highest project score (98%) in subject.</p>
                 <ul class="project-features">
                     <li>Led 8-month team development using C# Windows Forms</li>
                     <li>Implemented full CRUD functionality with MySQL database integration</li>
@@ -252,12 +252,12 @@
                     <li>Created automated logging system for database change tracking</li>
                     <li>Delivered ahead of schedule with top academic performance</li>
                 </ul>
-                <a href="https://github.com/yourusername/student-management" target="_blank" class="github-link">
+                <!-- <a href="https://github.com/yourusername/student-management" target="_blank" class="github-link">
                     <svg width="20" height="20" viewBox="0 0 16 16" fill="currentColor">
                         <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
                     </svg>
                     View on GitHub
-                </a>
+                </a> -->
                 <div class="project-tech">
                     <span class="tech-tag">C#</span>
                     <span class="tech-tag">Windows Forms</span>
@@ -270,7 +270,7 @@
             <div class="project-card">
                 <div class="project-header">
                     <span class="project-number">03</span>
-                    <span class="project-status">Completed</span>
+                    <span class="project-status"> In Progress </span>
                 </div>
                 <h3>Java E-Commerce Platform</h3>
                 <p>Modern e-commerce application with complete user and admin functionality built using Spring Boot.</p>
@@ -281,12 +281,12 @@
                     <li>PostgreSQL integration for persistent data storage</li>
                     <li>RESTful API design with comprehensive CRUD operations</li>
                 </ul>
-                <a href="https://github.com/yourusername/ecommerce-platform" target="_blank" class="github-link">
+                <!-- <a href="https://github.com/yourusername/ecommerce-platform" target="_blank" class="github-link">
                     <svg width="20" height="20" viewBox="0 0 16 16" fill="currentColor">
                         <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
                     </svg>
                     View on GitHub
-                </a>
+                </a> -->
                 <div class="project-tech">
                     <span class="tech-tag">Java</span>
                     <span class="tech-tag">Spring Boot</span>
@@ -299,7 +299,7 @@
             <div class="project-card">
                 <div class="project-header">
                     <span class="project-number">04</span>
-                    <span class="project-status">Completed</span>
+                    <span class="project-status"> In Progress </span>
                 </div>
                 <h3>SQL Portfolio Database Projects</h3>
                 <p>Collection of advanced SQL database implementations demonstrating enterprise-level database design and querying skills.</p>
@@ -310,12 +310,12 @@
                     <li>Designed comprehensive database schemas with proper normalization</li>
                     <li>Documented all work with Markdown for clarity and maintainability</li>
                 </ul>
-                <a href="https://github.com/yourusername/sql-portfolio" target="_blank" class="github-link">
+                <!-- <a href="https://github.com/yourusername/sql-portfolio" target="_blank" class="github-link">
                     <svg width="20" height="20" viewBox="0 0 16 16" fill="currentColor">
                         <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
                     </svg>
                     View on GitHub
-                </a>
+                </a> -->
                 <div class="project-tech">
                     <span class="tech-tag">SQL Server</span>
                     <span class="tech-tag">PostgreSQL</span>
@@ -361,16 +361,17 @@
                         <h3>Co-Lead</h3>
                         <p class="experience-project">AI-Assisted Generator Monitoring</p>
                     </div>
-                    <span class="experience-date">Present</span>
+                    <span class="experience-date"> Jan 2025 - Nov 2025</span>
                 </div>
                 <p class="experience-description">
-                    Co-leading a year-long industry-collaborative project focused on real-time generator monitoring and predictive maintenance solutions.
+                    Co-lead a year-long industry-collaborative project focused on real-time generator monitoring and predictive maintenance solutions.
                 </p>
                 <ul class="experience-achievements">
                     <li>Organize weekly stand-up meetings for progress tracking</li>
-                    <li>Contribute to system architecture and security design</li>
-                    <li>Coordinate technical challenge resolution across team</li>
-                    <li>Assist in planning predictive AI model development using sensor data</li>
+                    <li>Contributed to system architecture and security design</li>
+                    <li>Took charge of Data Storage and Data Visualisation</li>
+                    <li>Coordinate technical and interpersonal challenge resolution across team</li>
+                    <li>Assisted in planning predictive AI model development using sensor data</li>
                     <li>Collaborate with industry partners on real-world requirements</li>
                 </ul>
             </div>
