Minor spelling fix

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="highlight-item">
                         <div class="highlight-text">
                             <h4>Top Academic Performance</h4>
-                            <p>Achieved 98% on final project - highest in cohort</p>
+                            <p>Achieved 98% on final project - highest in subject</p>
                         </div>
                     </div>
                     <div class="highlight-item">
