Minor Grammatical error fix

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         </div>
         <div class="contact-content">
             <p>
-                I'm actively seeking graduate programs and internship opportunities locally and globally, in order to complete my 4th Year of Bachelors. If you're looking for a passionate, dedicated full-stack engineer, I'd open to hear from you.
+                I'm actively seeking graduate programs and internship opportunities locally and globally, in order to complete my 4th Year of Bachelors. If you're looking for a passionate, dedicated full-stack engineer, I'd be open to hear from you.
             </p>
             <div class="contact-grid">
                 <a href="mailto:ganeshshiva772@gmail.com" class="contact-card">
